--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
       <version>1.0.2</version>
       <type>jar</type>
     </dependency>
+    <!-- For configuration file -->
+    <dependency>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <version>1.4.2</version>
+      <type>jar</type>
+    </dependency>
 	</dependencies>
 
 	<build>
@@ -98,7 +105,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-              <mainClass>com.owlplatform.solver.MakerDemo</mainClass>
+              <mainClass>com.owlplatform.demo.MakerDemo</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
